publish new version

--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
   "licence": "https://github.com/fooloomanzoo/input-picker-pattern/raw/master/LICENSE.txt",
   "dependencies": {
     "polymer": "Polymer/polymer#1.9 - 2",
-    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior",
+    "iron-overlay-behavior": "PolymerElements/iron-overlay-behavior"
   },
   "variants": {
     "1.x": {
