--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "input-picker-pattern.html",
   "scripts": {
     "postinstall": "bower install",
-    "prepublish": "npm run build && git add . && git commit -m \"publish new version\" && git push && npm version patch",
+    "prepublish": "npm run build && git pull && git add . && git commit -m \"publish new version\" && git push && npm version patch",
     "build": "bower update && polymer analyze > analysis.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
